--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" type="text/css" href="potree-libs/potree/potree.css">
+    <link rel="stylesheet" type="text/css" href="potree-libs/libs/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="potree-libs/libs/openlayers3/ol.css">
+    <link rel="stylesheet" type="text/css" href="potree-libs/libs/spectrum/spectrum.css">
+    <link rel="stylesheet" type="text/css" href="potree-libs/libs/jstree/themes/mixed/style.css">
+    <link rel="stylesheet" type="text/css" href="potree-libs/libs/Cesium/Widgets/CesiumWidget/CesiumWidget.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +45,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="/potree-libs/libs/jquery/jquery-3.1.1.min.js"></script>
+    <script src="/potree-libs/libs/spectrum/spectrum.js"></script>
+    <script src="/potree-libs/libs/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/potree-libs/libs/other/BinaryHeap.js"></script>
+    <script src="/potree-libs/libs/tween/tween.min.js"></script>
+    <script src="/potree-libs/libs/d3/d3.js"></script>
+    <script src="/potree-libs/libs/proj4/proj4.js"></script>
+    <script src="/potree-libs/libs/openlayers3/ol.js"></script>
+    <script src="/potree-libs/libs/i18next/i18next.js"></script>
+    <script src="/potree-libs/libs/jstree/jstree.js"></script>
+    <script src="/potree-libs/potree/potree/potree.js"></script>
+    <script src="/potree-libs/libs/plasio/js/laslaz.js"></script>
+    <script src="/potree-libs/libs/Cesium/Cesium.js"></script>
   </body>
 </html>
